Created contract via Remix - commented code in local file

--- a/index.html
+++ b/index.html
@@ -16,5 +16,24 @@
       
       <button onclick="setmood()">Set Mood</button>
     </div>
+    <script>
+    /* Creating contract code on remix
+    // SPDX-License-Identifier: MIT
+    pragma solidity ^0.8.1;
+
+    contract MoodDiary {
+      string mood;
+
+    function setMood(string memory _mood) public{
+       mood = _mood;
+    }
+
+    //Read the mood from the smart contract
+    function getMood() public view returns(string memory){
+       return mood;
+      }
+    }
+    */
+    </script>
   </body>
 </html>
